--- a/js/examples/llama-index-express/frontend/package.json
+++ b/js/examples/llama-index-express/frontend/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^16.3.1",
     "llamaindex": "0.0.48",
     "next": "^14.0.3",
+    "pdfjs-dist": "^4.2.67",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "supports-color": "^9.4.0"
@@ -21,11 +22,11 @@
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
     "autoprefixer": "^10.4.16",
+    "cross-env": "^7.0.3",
     "eslint": "^8.55.0",
     "eslint-config-next": "^14.0.3",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
-    "typescript": "^5.3.2",
-    "cross-env": "^7.0.3"
+    "typescript": "^5.3.2"
   }
 }
