ignore failing test statements and pin versions of llama-index-core

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -37,7 +37,7 @@ commands_pre =
   openai: pip install {toxinidir}/instrumentation/openinference-instrumentation-openai[test]
   openai-latest: pip install -U openai
   llama_index: pip install {toxinidir}/instrumentation/openinference-instrumentation-llama-index[test]
-  llama_index-latest: pip install -U llama_index
+  llama_index-latest: pip install -U llama-index llama-index-core
   dspy: pip install {toxinidir}/instrumentation/openinference-instrumentation-dspy[test]
   dspy-latest: pip install -U dspy-ai
   langchain: pip install {toxinidir}/instrumentation/openinference-instrumentation-langchain[test]
