--- a/python/instrumentation/openinference-instrumentation-llama-index/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-llama-index/pyproject.toml
@@ -36,11 +36,10 @@ dependencies = [
 
 [project.optional-dependencies]
 instruments = [
-  "llama-index >= 0.10.5",
+  "llama-index-core >= 0.10.5",
 ]
 test = [
-  "llama-index == 0.10.37",
-  "llama-index-core == 0.10.37",
+  "llama-index-core == 0.10.36",
   "llama-index-llms-openai",
   "opentelemetry-sdk",
   "respx",
