--- a/python/instrumentation/openinference-instrumentation-llama-index/examples/requirements.txt
+++ b/python/instrumentation/openinference-instrumentation-llama-index/examples/requirements.txt
@@ -1,6 +1,10 @@
+chromadb
 llama-index >= 0.10.0
+llama-index-agent-openai
+llama-index-llms-openai
 llama-index-vector-stores-chroma
 openinference-instrumentation-llama-index
-opentelemetry-sdk
 opentelemetry-exporter-otlp
-chromadb
+opentelemetry-sdk
+sqlalchemy
+wikipedia
