--- a/.github/workflows/typescript-CI.yaml
+++ b/.github/workflows/typescript-CI.yaml
@@ -1,73 +1,73 @@
 name: Typescript CI
 
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    paths:
-      - "js/**"
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+    push:
+        branches: [main]
+    pull_request:
+        paths:
+            - "js/**"
+    # Allows you to run this workflow manually from the Actions tab
+    workflow_dispatch:
 
 concurrency:
-  group: test-typescript-${{ github.head_ref }}
-  cancel-in-progress: true
+    group: test-typescript-${{ github.head_ref }}
+    cancel-in-progress: true
 
 jobs:
-  changes:
-    name: Filter Changes
-    runs-on: ubuntu-latest
-    outputs:
-      diff: ${{ steps.filter.outputs.diff }}
-    steps:
-      - uses: actions/checkout@v4
-      - uses: dorny/paths-filter@v3
-        id: filter
-        with:
-          filters: |
-            diff:
-              - "js/packages/**/*.js"
-              - "js/packages/**/*.ts"
-              - "js/packages/**/package.json"
-              - "js/packages/**/tsconfig.*"
+    changes:
+        name: Filter Changes
+        runs-on: ubuntu-latest
+        outputs:
+            diff: ${{ steps.filter.outputs.diff }}
+        steps:
+            - uses: actions/checkout@v4
+            - uses: dorny/paths-filter@v3
+              id: filter
+              with:
+                  filters: |
+                      diff:
+                        - "js/packages/**/*.js"
+                        - "js/packages/**/*.ts"
+                        - "js/packages/**/package.json"
+                        - "js/packages/**/tsconfig.*"
 
-  ci:
-    name: CI Typescript
-    needs: changes
-    if: ${{ needs.changes.outputs.diff == 'true' }}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-      - name: Set up Nodejs
-        uses: actions/setup-node@v4
-        with:
-          node-version: 18
-      - name: Setup PNPM
-        uses: pnpm/action-setup@v4
-        with:
-          version: 9.8.0
-      - name: Install Dependencies
-        working-directory: ./js
-        run: pnpm install --frozen-lockfile -r
-      - name: Pre-Build
-        working-directory: ./js
-        run: pnpm run -r prebuild
-      - name: Build
-        working-directory: ./js
-        run: pnpm run -r build
-      - name: Test
-        working-directory: ./js
-        run: pnpm run -r test
-      - name: Formatting
-        working-directory: ./js
-        run: |
-          pnpm run prettier:check
-      - name: Type Checking
-        working-directory: ./js
-        run: |
-          pnpm run type:check
-      - name: Linting
-        working-directory: ./js
-        run: |
-          pnpm run lint
+    ci:
+        name: CI Typescript
+        needs: changes
+        if: ${{ needs.changes.outputs.diff == 'true' }}
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout Repository
+              uses: actions/checkout@v4
+            - name: Set up Nodejs
+              uses: actions/setup-node@v4
+              with:
+                  node-version: 18
+            - name: Setup PNPM
+              uses: pnpm/action-setup@v4
+              with:
+                  version: 9.8.0
+            - name: Install Dependencies
+              working-directory: ./js
+              run: pnpm install --frozen-lockfile --no-optional -r
+            - name: Pre-Build
+              working-directory: ./js
+              run: pnpm run -r prebuild
+            - name: Build
+              working-directory: ./js
+              run: pnpm run -r build
+            - name: Test
+              working-directory: ./js
+              run: pnpm run -r test
+            - name: Formatting
+              working-directory: ./js
+              run: |
+                  pnpm run prettier:check
+            - name: Type Checking
+              working-directory: ./js
+              run: |
+                  pnpm run type:check
+            - name: Linting
+              working-directory: ./js
+              run: |
+                  pnpm run lint
