--- a/js/packages/openinference-instrumentation-beeai/package.json
+++ b/js/packages/openinference-instrumentation-beeai/package.json
@@ -30,13 +30,20 @@
     "dist",
     "src"
   ],
-  "keywords": [],
+  "keywords": [
+    "beeai",
+    "opentelemetry",
+    "tracing"
+  ],
   "dependencies": {
     "@arizeai/openinference-core": "workspace:*",
     "@arizeai/openinference-semantic-conventions": "workspace:*",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/instrumentation": "^0.57.1",
     "remeda": "^2.20.2"
+  },
+  "peerDependencies": {
+    "beeai-framework": "^0.1.5"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
@@ -45,11 +52,12 @@
     "jest": "^29.7.0"
   },
   "optionalDependencies": {
-    "ollama": "^0.5.12",
-    "ts-node": "^10.9.2",
+    "@opentelemetry/sdk-trace-node": "^1.30.1",
     "@opentelemetry/exporter-trace-otlp-proto": "^0.50.0",
     "@opentelemetry/resources": "^1.30.1",
     "@opentelemetry/sdk-node": "^0.57.1",
-    "@opentelemetry/semantic-conventions": "^1.28.0"
+    "@opentelemetry/semantic-conventions": "^1.28.0",
+    "ollama": "^0.5.12",
+    "ts-node": "^10.9.2"
   }
 }
