--- a/js/packages/openinference-instrumentation-beeai/package.json
+++ b/js/packages/openinference-instrumentation-beeai/package.json
@@ -55,10 +55,10 @@
     "@opentelemetry/sdk-node": "^0.57.1",
     "@opentelemetry/sdk-trace-node": "^1.30.1",
     "@opentelemetry/semantic-conventions": "^1.28.0",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "ts-node": "^10.9.2"
   },
   "optionalDependencies": {
-    "ollama": "^0.5.12",
-    "ts-node": "^10.9.2"
+    "ollama": "^0.5.12"
   }
 }
